Hide menu button on mobile to avoid content wrapping

--- a/assets/css/components/menu.css
+++ b/assets/css/components/menu.css
@@ -55,6 +55,12 @@
 	padding: 0.5em 1em;
 }
 
+@media (--phone) {
+	.nav__cta {
+		display: none;
+	}
+}
+
 /**
  * When the menu is closed, hide the list and the close icon. 
  */
